Added missing ODBC library; Corrected relative loader paths for Qt database plugins for proper loading; references #742
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4086 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/make/config.darwin-10.6
+++ b/isis/make/config.darwin-10.6
@@ -262,6 +262,7 @@ THIRDPARTYLIBS    += "$(ISIS3OPT)/lib/libgeos*.dylib"
 THIRDPARTYLIBS    += "$(ISIS3OPT)/lib/libsqlite3.*dylib"
 THIRDPARTYLIBS    += "$(ISIS3OPT)/lib/postgresql*/libpq.*dylib"
 THIRDPARTYLIBS    += "$(ISIS3OPT)/lib/mysql5/mysql/libmysqlclient_r*.dylib"
+THIRDPARTYLIBS    += "$(ISIS3OPT)/lib/libiodbc*.dylib"
 THIRDPARTYLIBS    += "$(ISIS3PROP)/lib/libkdu_a63R.dylib"
 THIRDPARTYLIBS    += "$(ISIS3OPT)/lib/libamd.dylib"
 THIRDPARTYLIBS    += "$(ISIS3OPT)/lib/libcholmod.dylib"
