Automagically detect presence of proprietary Kakadu library and set conditional compile appropriately; Fix conditional compilation issues when Kakadu package is not present in JP2 classes; references #770
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4195 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/make/config.darwin-10.6
+++ b/isis/make/config.darwin-10.6
@@ -2,7 +2,7 @@
 #--------------------------------------------------------------------------
 # Compiler options
 #---------------------------------------------------------------------------
-#  Set all builds to 32-bit architecture until support for others is added
+#  Build architecture now automatically determined at build time via isis.conf
 include $(ISISROOT)/make/isis.conf
 
 MAC_ARCH_FLAGS = $(MAC_ARCH) $(MAC_XARCH) $(MAC_OS_MIN)
@@ -60,7 +60,7 @@ ISISSHAREDOFF   =
 ISISARFLAGS     =
 
 #---------------------------------------------------------------------------
-#  3rd party directory root
+#  Set ISIS Dev Kit (IDK) paths
 #---------------------------------------------------------------------------
 IDK_ROOT       ?= /opt/usgs/v002
 ISIS3OPT       ?= $(IDK_ROOT)/ports
@@ -217,11 +217,20 @@ PROTOC         = $(ISIS3OPT)/bin/protoc
 # should be set to true if you are building with the Kakadu library and
 # you want to use the JPEG2000 specific code in the ISIS3 system. Otherwise,
 # set the ENABLEJP2K flag to false.
+#
+#  Added abililty to automatically detect the existance of the Kakadu include
+#  directory.  One can set the environment variable JP2KFLAG with a 1 or 0
+#  depending upon need.  Developers can define appropriate enviroment variables
+#  for the complete JP2K environment.  Just redefine them based upon the usage
+#  below (i.e., be sure to add -I, -L and -l to the variables for KAKADUINCDIR,
+#  KAKADULIBDIR and KAKADULIB, respectively).
 #---------------------------------------------------------------------------
-KAKADUINCDIR = -I$(ISIS3PROP)/include/kakadu/v6_3-00967N
-KAKADULIBDIR = -L$(ISIS3PROP)/lib
-KAKADULIB    = -lkdu_a63R
-ISISCPPFLAGS += -DENABLEJP2K=1
+KAKADUINCDIR ?= -I$(ISIS3PROP)/include/kakadu/v6_3-00967N
+KAKADULIBDIR ?= -L$(ISIS3PROP)/lib
+KAKADULIB    ?= -lkdu_a63R
+#  Strip -I from Kakadu include directory macro and check for existance
+JP2KFLAG ?= $(shell if [ -d $(subst -I,,$(KAKADUINCDIR)) ]; then echo "1"; else echo "0"; fi;)
+ISISCPPFLAGS += -DENABLEJP2K=$(JP2KFLAG)
 
 
 #---------------------------------------------------------------------------
@@ -275,7 +284,6 @@ THIRDPARTYLIBS    += "$(ISIS3PROP)/lib/libkdu_a63R.dylib"
 THIRDPARTYLIBS    += "$(ISIS3OPT)/lib/libamd.dylib"
 THIRDPARTYLIBS    += "$(ISIS3OPT)/lib/libcholmod.dylib"
 THIRDPARTYLIBS    += "$(ISIS3OPT)/lib/libcolamd.dylib"
-#THIRDPARTYLIBS    += "$(ISIS3OPT)/lib/libufconfig.dylib"
 THIRDPARTYLIBS    += "/System/Library/Frameworks/Accelerate.framework"
 
 # libxerces-c depends on these libraries
