Added missing include paths
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4368 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/make/config.darwin-10.5
+++ b/isis/make/config.darwin-10.5
@@ -91,9 +91,11 @@ QTINCDIR += -I$(QTDIR)/libexec/qt4-mac/include/QtCore
 QTINCDIR += -I$(QTDIR)/libexec/qt4-mac/include/QtAssistant
 QTINCDIR += -I$(QTDIR)/libexec/qt4-mac/include/QtGui
 QTINCDIR += -I$(QTDIR)/libexec/qt4-mac/include/QtNetwork
+QTINCDIR += -I$(QTDIR)/libexec/qt4-mac/include/QtOpenGL
 QTINCDIR += -I$(QTDIR)/libexec/qt4-mac/include/QtScript
 QTINCDIR += -I$(QTDIR)/libexec/qt4-mac/include/QtSql
 QTINCDIR += -I$(QTDIR)/libexec/qt4-mac/include/QtSvg
+QTINCDIR += -I$(QTDIR)/libexec/qt4-mac/include/QtTest
 QTINCDIR += -I$(QTDIR)/libexec/qt4-mac/include/QtWebKit
 QTINCDIR += -I$(QTDIR)/libexec/qt4-mac/include/QtXml
 QTINCDIR += -I$(QTDIR)/libexec/qt4-mac/include/QtXmlPatterns
