--- a/isis/make/config.darwin-10.6
+++ b/isis/make/config.darwin-10.6
@@ -89,10 +89,12 @@ QTINCDIR += -I$(QTDIR)/lib/QtCore.framework/Headers
 QTINCDIR += -I$(QTDIR)/lib/QtAssistant.framework/Headers
 QTINCDIR += -I$(QTDIR)/lib/QtGui.framework/Headers
 QTINCDIR += -I$(QTDIR)/lib/QtNetwork.framework/Headers
+QTINCDIR += -I$(QTDIR)/lib/QtOpenGL.framework/Headers
 QTINCDIR += -I$(QTDIR)/lib/QtScript.framework/Headers
 QTINCDIR += -I$(QTDIR)/lib/QtScriptTools.framework/Headers
 QTINCDIR += -I$(QTDIR)/lib/QtSql.framework/Headers
 QTINCDIR += -I$(QTDIR)/lib/QtSvg.framework/Headers
+QTINCDIR += -I$(QTDIR)/lib/QtTest.framework/Headers
 QTINCDIR += -I$(QTDIR)/lib/QtWebKit.framework/Headers
 QTINCDIR += -I$(QTDIR)/lib/QtXml.framework/Headers
 QTINCDIR += -I$(QTDIR)/lib/QtXmlPatterns.framework/Headers
