Added QtTest to linker of mac osx 10.6
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4369 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/make/config.darwin-10.6
+++ b/isis/make/config.darwin-10.6
@@ -105,7 +105,7 @@ ISISCPPFLAGS       += $(QTDARWINFLAGS)
 QTCOMMONFRAMEWORKS  =
 QTFRAMEWORKS        = -framework QtXmlPatterns -framework QtXml -framework QtNetwork \
                       -framework QtSql -framework QtGui -framework QtCore -framework QtSvg \
-                      -framework QtWebKit -framework QtOpenGL
+                      -framework QtTest -framework QtWebKit -framework QtOpenGL
 QTLIB               = $(QTFRAMEWORKS) $(QTCOMMONFRAMEWORKS)
 
 QTOPENGL     = -framework OpenGL -framework AGL
