Make install needs to include qttest for macs
git-svn-id: http://subversion.wr.usgs.gov/repos/prog/isis3/trunk@4375 41f8697f-d340-4b68-9986-7bafba869bb8

--- a/isis/make/config.darwin-10.6
+++ b/isis/make/config.darwin-10.6
@@ -264,6 +264,7 @@ THIRDPARTYLIBS    += "$(QTDIR)/lib/QtCore.framework"
 THIRDPARTYLIBS    += "$(QTDIR)/lib/QtSvg.framework"
 THIRDPARTYLIBS    += "$(QTDIR)/lib/QtWebKit.framework"
 THIRDPARTYLIBS    += "$(QTDIR)/lib/QtOpenGL.framework"
+THIRDPARTYLIBS    += "$(QTDIR)/lib/QtTest.framework"
 THIRDPARTYLIBS    += "$(ISIS3OPT)/lib/qwt.framework"
 THIRDPARTYLIBS    += "$(ISIS3LOCAL)/lib/libcspice*.dylib"
 THIRDPARTYLIBS    += "$(ISIS3LOCAL)/lib/libsuperlu*.dylib"
