--- a/isis/make/config.darwin-10.5
+++ b/isis/make/config.darwin-10.5
@@ -135,11 +135,11 @@ TIFFLIBDIR = -L$(ISIS3OPT)/lib
 TIFFLIB    = -ltiff
 
 #---------------------------------------------------------------------------
-# Set up for naif dsk and cspice libraries
+# Set up for naif cspice libraries. Update for N0066 release (KJB 2017-06-28)
 #---------------------------------------------------------------------------
-NAIFINCDIR = -I$(ISIS3LOCAL)/include/naif/dsklib -I$(ISIS3LOCAL)/include/naif/
+NAIFINCDIR = -I$(ISIS3LOCAL)/include/naif/
 NAIFLIBDIR = -L$(ISIS3LOCAL)/lib
-NAIFLIB    = -ldsklib -lcspice
+NAIFLIB    = -lcspice
 
 #---------------------------------------------------------------------------
 # Set up for TNT
@@ -271,7 +271,6 @@ THIRDPARTYLIBS    += "$(QTDIR)/libexec/qt4-mac/lib/QtSvg.framework"
 THIRDPARTYLIBS    += "$(QTDIR)/libexec/qt4-mac/lib/QtWebKit.framework"
 THIRDPARTYLIBS    += "$(QTDIR)/libexec/qt4-mac/lib/QtOpenGL.framework"
 THIRDPARTYLIBS    += "$(ISIS3OPT)/lib/libqwt.*dylib"
-THIRDPARTYLIBS    += "$(ISIS3LOCAL)/lib/libdsklib*.dylib"
 THIRDPARTYLIBS    += "$(ISIS3LOCAL)/lib/libcspice*.dylib"
 #THIRDPARTYLIBS   += "$(ISIS3LOCAL)/lib/libsuperlu_3.0.dylib"
 THIRDPARTYLIBS    += "$(ISIS3OPT)/lib/libprotobuf*.dylib"
